//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated from a template.
//
//     Manual changes to this file may cause unexpected behavior in your application.
//     Manual changes to this file will be overwritten if the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace DriveCareCore.Data.BD
{
    using System;
    using System.Collections.Generic;
    
    public partial class UserWorkshopPaintInquiry
    {
        public System.Guid RowId { get; set; }
        public System.Guid UserId { get; set; }
        public System.Guid UserCarId { get; set; }
        public System.Guid CarId { get; set; }
        public System.Guid WorkshopId { get; set; }
        public Nullable<System.Guid> WorkshopPaintServiceId { get; set; }
        public byte PaintKind { get; set; }
        public Nullable<System.Guid> ColorId { get; set; }
        public string ColorName { get; set; }
        public string PartName { get; set; }
        public string Notes { get; set; }
        public byte StatusCode { get; set; }
        public System.DateTime CreatedAt { get; set; }
    }
}
