//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated from a template.
//
//     Manual changes to this file may cause unexpected behavior in your application.
//     Manual changes to this file will be overwritten if the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace DriveCareCore.Data.BD
{
    using System;
    using System.Collections.Generic;
    
    public partial class Workshop
    {
        [System.Diagnostics.CodeAnalysis.SuppressMessage("Microsoft.Usage", "CA2214:DoNotCallOverridableMethodsInConstructors")]
        public Workshop()
        {
            this.Employees = new HashSet<Employee>();
            this.Roles = new HashSet<Role>();
            this.WorkshopGuestCars = new HashSet<WorkshopGuestCar>();
            this.WorkshopParts = new HashSet<WorkshopPart>();
            this.WorkshopServiceClients = new HashSet<WorkshopServiceClient>();
            this.WorkshopServices = new HashSet<WorkshopService>();
            this.WorkshopServiceUnits = new HashSet<WorkshopServiceUnit>();
            this.WorkshopBusinessTypeChangeRequests = new HashSet<WorkshopBusinessTypeChangeRequest>();
            this.WorkshopBusinessTypes = new HashSet<WorkshopBusinessType>();
            this.WorkshopOnlineBookings = new HashSet<WorkshopOnlineBooking>();
            this.WorkshopWorkSchedules = new HashSet<WorkshopWorkSchedule>();
        }
    
        public System.Guid RowId { get; set; }
        public string Name { get; set; }
        public System.Guid CompanyId { get; set; }
        public Nullable<System.Guid> AddressId { get; set; }
        public string Description { get; set; }
        public Nullable<System.Guid> BusinessTypeId { get; set; }
    
        public virtual Address Address { get; set; }
        public virtual BusinessType BusinessType { get; set; }
        public virtual Company Company { get; set; }
        [System.Diagnostics.CodeAnalysis.SuppressMessage("Microsoft.Usage", "CA2227:CollectionPropertiesShouldBeReadOnly")]
        public virtual ICollection<Employee> Employees { get; set; }
        [System.Diagnostics.CodeAnalysis.SuppressMessage("Microsoft.Usage", "CA2227:CollectionPropertiesShouldBeReadOnly")]
        public virtual ICollection<Role> Roles { get; set; }
        [System.Diagnostics.CodeAnalysis.SuppressMessage("Microsoft.Usage", "CA2227:CollectionPropertiesShouldBeReadOnly")]
        public virtual ICollection<WorkshopGuestCar> WorkshopGuestCars { get; set; }
        [System.Diagnostics.CodeAnalysis.SuppressMessage("Microsoft.Usage", "CA2227:CollectionPropertiesShouldBeReadOnly")]
        public virtual ICollection<WorkshopPart> WorkshopParts { get; set; }
        [System.Diagnostics.CodeAnalysis.SuppressMessage("Microsoft.Usage", "CA2227:CollectionPropertiesShouldBeReadOnly")]
        public virtual ICollection<WorkshopServiceClient> WorkshopServiceClients { get; set; }
        [System.Diagnostics.CodeAnalysis.SuppressMessage("Microsoft.Usage", "CA2227:CollectionPropertiesShouldBeReadOnly")]
        public virtual ICollection<WorkshopService> WorkshopServices { get; set; }
        [System.Diagnostics.CodeAnalysis.SuppressMessage("Microsoft.Usage", "CA2227:CollectionPropertiesShouldBeReadOnly")]
        public virtual ICollection<WorkshopServiceUnit> WorkshopServiceUnits { get; set; }
        [System.Diagnostics.CodeAnalysis.SuppressMessage("Microsoft.Usage", "CA2227:CollectionPropertiesShouldBeReadOnly")]
        public virtual ICollection<WorkshopBusinessTypeChangeRequest> WorkshopBusinessTypeChangeRequests { get; set; }
        [System.Diagnostics.CodeAnalysis.SuppressMessage("Microsoft.Usage", "CA2227:CollectionPropertiesShouldBeReadOnly")]
        public virtual ICollection<WorkshopBusinessType> WorkshopBusinessTypes { get; set; }
        [System.Diagnostics.CodeAnalysis.SuppressMessage("Microsoft.Usage", "CA2227:CollectionPropertiesShouldBeReadOnly")]
        public virtual ICollection<WorkshopOnlineBooking> WorkshopOnlineBookings { get; set; }
        public virtual WorkshopOnlineBookingSetting WorkshopOnlineBookingSetting { get; set; }
        [System.Diagnostics.CodeAnalysis.SuppressMessage("Microsoft.Usage", "CA2227:CollectionPropertiesShouldBeReadOnly")]
        public virtual ICollection<WorkshopWorkSchedule> WorkshopWorkSchedules { get; set; }
    }
}
