//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated from a template.
//
//     Manual changes to this file may cause unexpected behavior in your application.
//     Manual changes to this file will be overwritten if the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace DriveCareCore.Data.BD
{
    using System;
    using System.Collections.Generic;
    
    public partial class WorkshopPaintService
    {
        public System.Guid RowId { get; set; }
        public System.Guid WorkshopId { get; set; }
        public byte PaintKind { get; set; }
        public string Name { get; set; }
        public string Description { get; set; }
        public Nullable<decimal> PriceFrom { get; set; }
        public bool IsActive { get; set; }
        public int SortOrder { get; set; }
        public System.DateTime CreatedAt { get; set; }
    }
}
