@startuml ER_Part08_CarSales_Paint
title Часть 8. Объявления о продаже авто и покраска
hide circle
skinparam linetype ortho
skinparam shadowing false
top to bottom direction

entity "Users" {
  RowId *
  Login
  Password
  Description
  Email
  BirthDate
  Phone
  CreatedAt
}

entity "UserCars" {
  RowId *
  UserId
  CarId
  Description
}

entity "Cars" {
  RowId *
  ModelId
  CarTypeId
  FuelTypeId
  Year
  Description
  Vin
  PlateNumber
}

entity "Colors" {
  RowId *
  Name
  Description
}

entity "CarSales" {
  RowId *
  CarId
  Title
  Description
  PhotoPath
  CreatedAt
  StatusId
  ModeratedByEmployeeId
  ModerationComment
  ModeratedAt
}

entity "CarSalePrices" {
  RowId *
  CarSaleId
  Price
  StartDate
  EndDate
  Description
}

entity "UserCarSales" {
  RowId *
  UserId
  CarSaleId
  Description
}

entity "Statuses" {
  RowId *
  Name
  Description
}

entity "Employees" {
  RowId *
  FirstName
  LastName
  MidName
  Login
  Password
  Email
  Phone
  BirthDate
  HireDate
  IsActive
  Description
  WorkshopId
}

entity "Workshops" {
  RowId *
  Name
  CompanyId
  AddressId
  Description
  BusinessTypeId
}

entity "WorkshopPaintServices" {
  RowId *
  WorkshopId
  PaintKind
  Name
  Description
  PriceFrom
  IsActive
  SortOrder
  CreatedAt
}

entity "WorkshopPaintColors" {
  RowId *
  WorkshopId
  ColorId
  ColorName
  IsActive
  SortOrder
  CreatedAt
}

entity "UserWorkshopPaintInquiries" {
  RowId *
  UserId
  UserCarId
  CarId
  WorkshopId
  WorkshopPaintServiceId
  PaintKind
  ColorId
  ColorName
  PartName
  Notes
  StatusCode
  CreatedAt
}

UserCars }o--|| Cars : CarId
UserCars }o--|| Users : UserId
CarSales }o--|| Statuses : StatusId
CarSales }o--|| Cars : CarId
CarSales }o--|| Employees : ModeratedByEmployeeId
CarSalePrices }o--|| CarSales : CarSaleId
UserCarSales }o--|| CarSales : CarSaleId
UserCarSales }o--|| Users : UserId
Employees }o--|| Workshops : WorkshopId
WorkshopPaintServices }o--|| Workshops : WorkshopId
WorkshopPaintColors }o--|| Workshops : WorkshopId
WorkshopPaintColors }o--|| Colors : ColorId
UserWorkshopPaintInquiries }o--|| UserCars : UserCarId
UserWorkshopPaintInquiries }o--|| WorkshopPaintServices : WorkshopPaintServiceId
UserWorkshopPaintInquiries }o--|| Colors : ColorId
UserWorkshopPaintInquiries }o--|| Cars : CarId
UserWorkshopPaintInquiries }o--|| Workshops : WorkshopId
UserWorkshopPaintInquiries }o--|| Users : UserId
@enduml
